# fastapi-jwt

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  main.css  pyproject.toml  setup.cfg  sitemap.xml
.github/: dependabot.yml
.github/workflows/: bump.yml  publish.yml  test.yml
contributing/: index.html
developing/: index.html
developing/backend/: index.html
developing/docs/: index.html
developing/release/: index.html
docs/: mkdocs.yml
docs/docs/: contributing.md  developing.md  index.md  release-notes.md  user_guide.md
docs/docs/user_guide/: classes.md  examples.md
faq/: index.html
fastapi_jwt/: __init__.py  jwt.py
fastapi_jwt/jwt_backends/: __init__.py  abstract_backend.py  authlib_backend.py  python_jose_backend.py
release-notes/: index.html
search/: search_index.json
tests/: conftest.py  mock_datetime_utils.py  test_security_jwt_bearer.py  test_security_jwt_bearer_optional.py  test_security_jwt_cookie.py  test_security_jwt_cookie_optional.py  test_security_jwt_general.py  test_security_jwt_general_optional.py  test_security_jwt_multiple_places.py  test_security_jwt_set_cookie.py
user_guide/: index.html
user_guide/classes/: index.html
user_guide/examples/: index.html
user_guide/usage/: index.html
