[metadata]
name = fastapi-jwt
version = file: VERSION
author = Konstantin Chernyshev
author_email = kdchernyshev@gmail.com
description = `FastAPI` extension for JTW Auth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k4black/fastapi-jwt
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development
    Typing :: Typed
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    fastapi >=0.50.0
    python-jose[cryptography] >=3.3.0

[options.package_data]
fastapi-jwt = py.typed

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
python-tag=py3

[options.extras_require]
test =
    httpx >=0.23.0,<1.0.0
    pytest >=7.0.0,<8.0.0
    pytest-cov >=4.0.0,<5.0.0
    pytest-mock >=3.0.0,<4.0.0
    requests >=2.28.0,<3.0.0
    black ==23.1.0
    mypy >=1.0.0,<2.0.0
    flake8 >=6.0.0,<7.0.0
    isort >=5.11.0,<6.0.0
docs =
    mkdocs >=1.4.0,<2.0.0
    mkdocs-material >=9.0.0,<10.0.0
    MkAutoDoc >=0.2.0,<1.0.0
    lazydocs >=0.4.5,<1.0.0
    mkdocs-include-markdown-plugin >=4.0.0,<5.0.0
    mkdocs-awesome-pages-plugin >=2.8.0,<3.0.0
    mike >=1.1.0,<2.0.0


[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
max-line-length = 120
doctests = True
max-doc-length = 120
exclude = test_*.py
exclude-from-doctest = test_*.py
max-complexity = 10
enable-extensions = pep8-naming,flake8-debugger,flake8-docstrings
;extend-ignore =
;    D102,  # Missing docstring in public method
;    D104,  # Missing docstring in public package
;    D105,  # Missing docstring in magic method
;    D107,  # Missing docstring in __init__
;    D401,  # First line should be in imperative mood; try rephrasing
;    D412,  # No blank lines allowed between a section header and its content
;    E741,  # ambiguous variable name '...'
;    E742,  # ambiguous class definition '...'
;    F821,  # undefined name '...'

[mypy]
ignore_missing_imports = True
no_incremental = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = False
disallow_any_generics = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
allow_untyped_decorators = True

[tool:pytest]
testpaths = tests/
python_files = test_*.py
addopts = --cov=fastapi_jwt/ --cov-report term-missing

[isort]
line_length=120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=fastapi-jwt,tests
profile = black
